<resources>
    <string name="app_name">About Me</string>
    <string name="yellow_star">yellow star</string>
    <string name="hello_world">Hello World!</string>
    <string name="name">Aleks Haecky</string>
    <string name="bio_text">Hi, my name is Aleks.
        \n\nI love fish
        \n\nThe kind that is alive and swims around in a aquarium or river, or lake and definitely the ocean.
        \nFun fact is that I have several aquariums and also a river.
        \nI like eating fish, too. Raw fish. Grilled fish. smoked fish. Poached fish - not so much
        \nAnd sometimes even go fishing.
        \nAnd even less sometimes, I actually catch something.
        \n\nOnce, when I was camping in Canada, and very hungry, I even catch a large salmon with my hands.
        \n\nI'll be happy to teach you how to make your own aquarium.
        \nYou should ask me else about fishing, though.\n\n
    </string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
</resources>
